Add example environment configuration for delete-flavors script

--- a/delete-flavors/.env.example
+++ b/delete-flavors/.env.example
@@ -1,11 +1,20 @@
-# KALTURA PID as a number, not a string
+# Your Kaltura Partner ID (integer)
 PARTNER_ID=
-ADMIN_SECRET=""
-USER_ID=""
-EXPORT_CSV=True
-# Set your desired timezone (e.g., US/Pacific, US/Eastern, US/Central, Europe/Rome)
-TIMEZONE=""
 
-# Transcoding Id's https://kmc.kaltura.com/index.php/kmcng/settings/transcoding/list
-# as an integer, usually it's 0
-FLAVOR_SOURCE=
+# Your Kaltura Admin Secret (keep secure, never commit with values!)
+ADMIN_SECRET=
+
+# The user ID to associate with this session (optional, defaults to "admin" if blank)
+USER_ID=
+
+# The base URL for your Kaltura instance
+SERVICE_URL=https://www.kaltura.com
+
+# Privileges string for session creation
+PRIVILEGES=all:*,disableentitlement
+
+# Any combination of the following selectors (comma-delimited lists):
+# e.g. ENTRY_IDS=1_abc123,1_def456
+ENTRY_IDS=
+TAGS=
+CATEGORY_IDS=
