Update delete-flavors: add CSV support, header parsing, README instructions, changelog

--- a/delete-flavors/.env.example
+++ b/delete-flavors/.env.example
@@ -1,20 +1,25 @@
-# Your Kaltura Partner ID (integer)
+# -----------------------------------------------------------------------------
+# SESSION VARIABLES -----------------------------------------------------------
+# -----------------------------------------------------------------------------
+
 PARTNER_ID=
-
-# Your Kaltura Admin Secret (keep secure, never commit with values!)
 ADMIN_SECRET=
-
-# The user ID to associate with this session (optional, defaults to "admin" if blank)
-USER_ID=
-
-# The base URL for your Kaltura instance
+USER_ID=                            # optional, but recommended for audits
 SERVICE_URL=https://www.kaltura.com
-
-# Privileges string for session creation
 PRIVILEGES=all:*,disableentitlement
 
-# Any combination of the following selectors (comma-delimited lists):
-# e.g. ENTRY_IDS=1_abc123,1_def456
+
+# -----------------------------------------------------------------------------
+# SEARCH VARIABLES ------------------------------------------------------------
+# Use either search terms OR a CSV - not both. --------------------------------
+# -----------------------------------------------------------------------------
+
 ENTRY_IDS=
 TAGS=
 CATEGORY_IDS=
+
+# ⬆️ OR ⬇️
+
+CSV_FILENAME=
+# ⬇ the name column header in your CSV that has entry IDs
+ENTRY_ID_COLUMN_HEADER=
