[delete-flavors] add option to preserve multiple flavors in addition to the source one

--- a/delete-flavors/.env.example
+++ b/delete-flavors/.env.example
@@ -8,6 +8,10 @@ USER_ID=                            # optional, but recommended for audits
 SERVICE_URL=https://www.kaltura.com
 PRIVILEGES=all:*,disableentitlement
 
+# Get the Flavors ID to keep following this path:
+# KMC > Settings > Transcoding > Click on the relevant profile > Flavors
+# Direct link to KMC > Settings > Transcoding: https://kmc.kaltura.com/index.php/kmcng/settings/transcoding/list
+ADDITIONAL_FLAVORS_TO_KEEP="comma separated list of IDs"
 
 # -----------------------------------------------------------------------------
 # SEARCH VARIABLES ------------------------------------------------------------
